añadida función de get nombre de usuario por id en usuarios